--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -53,6 +53,7 @@ jobs:
           packages: libasound2:${{ matrix.config.apt-arch }} libasound2-dev:${{ matrix.config.apt-arch }} libpulse-dev:${{ matrix.config.apt-arch }}
           version: 1.0
           execute_install_scripts: true
+          debug: false
 
       - name: Install Audify Dependencies
         run: npm ci --ignore-scripts
