--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -9,11 +9,12 @@ jobs:
     strategy:
       matrix:
         config:
-          # - { name: "Windows", os: windows-latest, arch: "x64" }
+          # - { name: "Windows (x64)", os: windows-latest, arch: "x64" }
+          - { name: "Windows (IA32)", os: windows-latest, arch: "ia32" }
           # - { name: "Ubuntu (x64)", os: ubuntu-latest, arch: "x64", apt-arch: "amd64" }
           # - { name: "Ubuntu (ARM64)", os: ubuntu-latest, arch: "arm64", toolchain-arch: "aarch64", apt-arch: "arm64" }
           # - { name: "macOS (x64)", os: macos-latest, arch: "x64" }
-          - { name: "macOS (ARM64)", os: macos-latest, arch: "arm64" }
+          # - { name: "macOS (ARM64)", os: macos-latest, arch: "arm64" }
 
     env:
       CC: "${{ matrix.config.toolchain-arch && format('{0}-linux-gnu-gcc', matrix.config.toolchain-arch) || '' }}"
