--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         config:
-          # - { name: "Windows (x64)", os: windows-latest, arch: "x64" }
+          - { name: "Windows (x64)", os: windows-latest, arch: "x64" }
           - { name: "Windows (IA32)", os: windows-latest, arch: "ia32" }
           # - { name: "Ubuntu (x64)", os: ubuntu-latest, arch: "x64", apt-arch: "amd64" }
           # - { name: "Ubuntu (ARM64)", os: ubuntu-latest, arch: "arm64", toolchain-arch: "aarch64", apt-arch: "arm64" }
