--- a/.github/workflows/setup-build-environment.yml
+++ b/.github/workflows/setup-build-environment.yml
@@ -1,6 +1,6 @@
-name: Build && Deploy
+name: Setup Build Environment
 
-on: [push]
+on: [workflow_call]
 
 jobs:
   build:
@@ -16,15 +16,15 @@ jobs:
           - os: ubuntu-latest
             arch: x64
             apt-arch: amd64
-          - os: ubuntu-latest
-            arch: arm64
-            apt-arch: arm64
-            toolchain-arch: aarch64
-          - os: ubuntu-latest
-            arch: arm
-            apt-arch: armhf
-            toolchain-arch: arm
-            gnu-name: gnueabihf
+          # - os: ubuntu-latest
+          #   arch: arm64
+          #   apt-arch: arm64
+          #   toolchain-arch: aarch64
+          # - os: ubuntu-latest
+          #   arch: arm
+          #   apt-arch: armhf
+          #   toolchain-arch: arm
+          #   gnu-name: gnueabihf
         exclude:
           - os: windows-latest
             arch: arm64
@@ -36,6 +36,8 @@ jobs:
             arch: ia32
           - os: macos-latest
             arch: arm
+
+    name: ${{ runner.os }} - ${{ matrix.arch }}
 
     env:
       CC: "${{ matrix.toolchain-arch && format('{0}-linux-{1}-gcc', matrix.toolchain-arch, matrix.gnu-name || 'gnu') || '' }}"
@@ -75,15 +77,3 @@ jobs:
 
       - name: Install Audify Dependencies
         run: npm ci --ignore-scripts
-
-      - name: Build Audify
-        run: npm run rebuild -- --arch ${{ matrix.arch }}
-
-      - name: Upload Audify Binaries
-        uses: actions/upload-artifact@v3
-        with:
-          name: audify-${{ github.sha }}-release-${{ matrix.os }}-${{ matrix.arch }}
-          path: build/Release/
-
-      # - name: Build Audify Prebuilt Binaries
-      #   run: npm run build-binaries -- -- -- --arch ${{ matrix.arch }}
