--- a/.github/workflows/regenerate-docs.yml
+++ b/.github/workflows/regenerate-docs.yml
@@ -21,6 +21,9 @@ jobs:
         with:
           node-version: lts/*
 
+      - name: Install Audify Dependencies
+        run: npm ci --ignore-scripts
+
       - name: Re-Generate Docs
         run: npm run docs
 
