[CI]: Fix commit

--- a/.github/workflows/regenerate-docs.yml
+++ b/.github/workflows/regenerate-docs.yml
@@ -33,4 +33,4 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: "chore: regenerate docs"
-          file_pattern: "docs/**/*"
+          file_pattern: "docs"
