--- a/.github/workflows/commit-build.yml
+++ b/.github/workflows/commit-build.yml
@@ -3,7 +3,8 @@ name: Commit Build
 on:
   pull_request:
   push:
-    branches: master
+    branches:
+      - master
     paths:
       - "src/**"
       - "vendor/**"
