--- a/package.json
+++ b/package.json
@@ -6,12 +6,11 @@
 	"types": "index.d.ts",
 	"scripts": {
 		"docs": "typedoc index.d.ts --hideGenerator --name Audify.js",
-		"safe-docs": "git merge-base $(git log --pretty=format:%h -n1 index.d.ts) $(git log --pretty=format:%h -n1 docs) --is-ancestor || (npm run docs && git add docs && git commit -m 'chore: regenerate docs' docs)",
 		"rebuild": "cmake-js compile",
 		"install": "prebuild-install || npm run rebuild",
 		"deploy": "np --yolo",
-		"predeploy": "npm run safe-docs",
-		"build-binaries": "npm run build-binaries-node && npm run build-binaries-electron",
+		"build-binaries": "npm run build-binaries-node",
+		"postbuild-binaries": "npm run build-binaries-electron",
 		"build-binaries-node": "run-script-os",
 		"build-binaries-node:win32": "prebuild --backend cmake-js --include-regex \"^.*\\.(node|dylib|dll|so(\\.[0-9])?)$\" -t 12.11.0 -t 13.0.0 -t 14.0.0 -t 15.0.0 -t 16.0.0 -t 17.0.0 --verbose -u %GITHUB_TOKEN%",
 		"build-binaries-node:darwin:linux": "prebuild --backend cmake-js --include-regex \"^.*\\.(node|dylib|dll|so(\\.[0-9])?)$\" -t 12.11.0 -t 13.0.0 -t 14.0.0 -t 15.0.0 -t 16.0.0 -t 17.0.0 --verbose -u $GITHUB_TOKEN",
@@ -55,16 +54,16 @@
 	"homepage": "https://github.com/almoghamdani/audify#readme",
 	"dependencies": {
 		"bindings": "^1.5.0",
-		"cmake-js": "^6.3.0",
-		"node-addon-api": "^4.2.0",
-		"prebuild-install": "^7.0.0"
+		"cmake-js": "^7.1.1",
+		"node-addon-api": "^5.0.0",
+		"prebuild-install": "^7.1.1"
 	},
 	"devDependencies": {
-		"@types/node": "^16.11.10",
-		"np": "^7.6.0",
-		"prebuild": "^11.0.0",
+		"@types/node": "^18.11.18",
+		"np": "^7.6.2",
+		"prebuild": "^11.0.4",
 		"run-script-os": "^1.1.6",
-		"typedoc": "^0.22.10",
-		"typescript": "^4.5.2"
+		"typedoc": "^0.23.23",
+		"typescript": "^4.9.4"
 	}
 }
