ci: use PAT to bypass protected branch

--- a/.github/workflows/regenerate-docs.yml
+++ b/.github/workflows/regenerate-docs.yml
@@ -36,3 +36,4 @@ jobs:
         with:
           commit_message: "chore: regenerate docs"
           file_pattern: "docs"
+          token: ${{ secrets.DOCS_GITHUB_PAT }}
