--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 	"dependencies": {
 		"bindings": "^1.5.0",
 		"cmake-js": "^7.1.1",
+		"node-abi": "^3.30.0",
 		"node-addon-api": "^5.0.0",
 		"prebuild-install": "^7.1.1"
 	},
