--- a/package.json
+++ b/package.json
@@ -7,14 +7,11 @@
 	"scripts": {
 		"docs": "typedoc index.d.ts --hideGenerator --name Audify.js",
 		"rebuild": "cmake-js compile",
-		"install": "prebuild-install || npm run rebuild",
+		"install": "prebuild-install -r napi || npm run rebuild",
 		"deploy": "np --yolo",
-		"build-binaries-node": "run-script-os",
-		"build-binaries-node:win32": "prebuild --backend cmake-js --include-regex \"^.*\\.(node|dylib|dll|so(\\.[0-9])?)$\" -t 12.11.0 -t 13.0.0 -t 14.0.0 -t 15.0.0 -t 16.0.0 -t 17.0.0 -t 18.3.0 -t 19.0.0 -t 20.0.0 -t 21.0.0 --verbose -u %GITHUB_TOKEN%",
-		"build-binaries-node:darwin:linux": "prebuild --backend cmake-js --include-regex \"^.*\\.(node|dylib|dll|so(\\.[0-9])?)$\" -t 12.11.0 -t 13.0.0 -t 14.0.0 -t 15.0.0 -t 16.0.0 -t 17.0.0 -t 18.0.0 -t 19.0.0 -t 20.0.0 -t 21.0.0 --verbose -u $GITHUB_TOKEN",
-		"build-binaries-electron": "run-script-os",
-		"build-binaries-electron:win32": "prebuild --backend cmake-js --include-regex \"^.*\\.(node|dylib|dll|so(\\.[0-9])?)$\" -r electron -t 8.0.0 -t 9.0.0 -t 10.0.0 -t 11.0.0 -t 12.0.0 -t 13.0.0 -t 14.0.0 -t 15.0.0 -t 16.0.0 -t 17.0.0 -t 18.0.0 -t 19.0.0 -t 20.0.0 -t 21.0.0 -t 22.0.0 --verbose -u %GITHUB_TOKEN%",
-		"build-binaries-electron:darwin:linux": "prebuild --backend cmake-js --include-regex \"^.*\\.(node|dylib|dll|so(\\.[0-9])?)$\" -r electron -t 8.0.0 -t 9.0.0 -t 10.0.0 -t 11.0.0 -t 12.0.0 -t 13.0.0 -t 14.0.0 -t 15.0.0 -t 16.0.0 -t 17.0.0 -t 18.0.0 -t 19.0.0 -t 20.0.0 -t 21.0.0 -t 22.0.0 --verbose -u $GITHUB_TOKEN"
+		"build-binaries": "run-script-os",
+		"build-binaries:win32": "prebuild --backend cmake-js --include-regex \"^.*\\.(node|dylib|dll|so(\\.[0-9])?)$\" -r napi --all --verbose -u $GITHUB_TOKEN",
+		"build-binaries:darwin:linux": "prebuild --backend cmake-js --include-regex \"^.*\\.(node|dylib|dll|so(\\.[0-9])?)$\" -r napi --all --verbose -u $GITHUB_TOKEN"
 	},
 	"repository": {
 		"type": "git",
@@ -53,17 +50,26 @@
 	"homepage": "https://github.com/almoghamdani/audify#readme",
 	"dependencies": {
 		"bindings": "^1.5.0",
-		"cmake-js": "^7.1.1",
-		"node-abi": "^3.30.0",
-		"node-addon-api": "^5.0.0",
-		"prebuild-install": "^7.1.1"
+		"cmake-js": "^7.3.0",
+		"node-abi": "^3.62.0",
+		"node-addon-api": "^8.0.0",
+		"prebuild-install": "^7.1.2"
 	},
 	"devDependencies": {
-		"@types/node": "^18.11.18",
-		"np": "^7.6.2",
-		"prebuild": "^11.0.4",
+		"@types/node": "^20.12.7",
+		"np": "^10.0.5",
+		"prebuild": "^13.0.0",
 		"run-script-os": "^1.1.6",
-		"typedoc": "^0.23.23",
-		"typescript": "^4.9.4"
+		"typedoc": "^0.25.13",
+		"typescript": "^5.4.5"
+	},
+	"binary": {
+		"napi_versions": [
+			5,
+			6,
+			7,
+			8,
+			9
+		]
 	}
 }
