build: trigger build if workflow has changed

--- a/.github/workflows/commit-build.yml
+++ b/.github/workflows/commit-build.yml
@@ -15,6 +15,7 @@ on:
       - "package-lock.json"
       - "tsconfig.json"
       - "!docs/**"
+      - ".github/workflows/*build.yml"
 
 jobs:
   commit-build:
