--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -73,7 +73,19 @@ jobs:
         if: ${{ runner.os == 'Linux' && matrix.arch != 'x64' }}
         run: |
           sudo dpkg --add-architecture ${{ matrix.apt-arch }}
+          echo FILE 1 START
+          cat /etc/apt/sources.list
+          echo FILE 1 END
+          echo FILE 2 START
+          cat /etc/apt/apt-mirrors.txt
+          echo FILE 2 END
           sudo sed -i 's#http://azure.archive.ubuntu.com/ubuntu#[arch=${{ matrix.apt-arch }}] http://ports.ubuntu.com/ubuntu-ports#g' /etc/apt/apt-mirrors.txt
+          echo FILE 1 START
+          cat /etc/apt/sources.list
+          echo FILE 1 END
+          echo FILE 2 START
+          cat /etc/apt/apt-mirrors.txt
+          echo FILE 2 END
           sudo apt-get update -yq
 
       - name: Install External Dependencies
