--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,6 +74,9 @@ jobs:
         run: |
           sudo dpkg --add-architecture ${{ matrix.apt-arch }}
           sudo sed -i 's#mirror+file#[arch=${{ matrix.apt-arch }}] mirror+file#g' /etc/apt/sources.list
+          sudo cat /etc/apt/apt-mirrors.txt
+          sudo sed -i 's#http://azure.archive.ubuntu.com/ubuntu#http://ports.ubuntu.com/ubuntu-ports#g' /etc/apt/apt-mirrors.txt
+          sudo cat /etc/apt/apt-mirrors.txt
           sudo apt-get update -yq
 
       - name: Install External Dependencies
